--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@ layout: compress
 
 <main>
   <div class="page-content">
-    <div class="wrapper">
+    <div class="container">
       {{ content }}
     </div>
   </div>
