--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,2 @@
-<footer class="site-footer">
-  <div class="wrapper">
-    {% include social.html %}
-    <p>{{ site.description }}</p>
-    <p class="small">Copyright &copy; {{ 'now' | date: "%Y" }}</p>
-  </div>
-
-</footer>
-
-<div class="hide">{% include /symbol/svg/sprite.symbol.svg %}</div>
-
-
-<!-- If you don't need JQuery, remove it!-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/{{site.jquery_version}}/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="/js/vendor/jquery-{{site.jquery_version}}.min.js"><\/script>')</script>
-<script src="/js/main.js" type="text/javascript"></script>
-{% if page.custom_js %}
-<script src="/js/{{page.custom_js}}.js" type="text/javascript"></script>
-{% endif %}
+<hr>
+<p class="container">Brought to you by <a href="http://about.me/chrisroy" title="More info about Chris">Chris Roy</a> and Iwona Sztorc.</p>
