--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,2 @@
 <hr>
-<p class="container">Brought to you by <a href="http://about.me/chrisroy" title="More info about Chris">Chris Roy</a> and Iwona Sztorc.</p>
+<p class="container">Brought to you by <a href="http://about.me/chrisroy" title="More info about Chris">Chris Roy</a> and <a href="https://www.behance.net/iwonasztorc">Iwona Sztorc</a>.</p>
