Style : New homepage style - Remove "logo" for just now - Add basic animation

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,6 @@
-<hr>
-<p class="container">Brought to you by <a href="http://about.me/chrisroy" title="More info about Chris">Chris Roy</a> and Iwona Sztorc.</p>
+<footer class="u-z0">
+  <hr class="container">
+  <p class="container"><small>Brought to you by <a href="http://about.me/chrisroy" title="More info about Chris">Chris Roy</a> and Iwona Sztorc.</small></p>
+</footer>
+
+<script src="/js/main.js"></script>
