--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,4 +40,6 @@
   {% if site.modernizr %}
   <script src="/js/vendor/modernizr-2.8.3.min.js"></script>
   {% endif %}
+
+  <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
 </head>
