--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@ layout: compress
 
 {% include header.html %}
 
-<main>
+<main class="u-z1">
   <div class="page-content">
     <div class="container">
       {{ content }}
