--- a/css/main.scss
+++ b/css/main.scss
@@ -14,16 +14,9 @@
 "_html-elements",
 "_grid",
 "_syntax-highlighting",
+"_typography",
 "_header",
 "_footer",
-"_z-index";
+"_utilities";
 
 // PAGES STYLES
-
-
-// Hide anything mobile specific
-@include media-min($screen-medium) {
-  [data-mobile="true"] {
-    display: none;
-  }
-}
