refa(config): Setting up some basics

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,7 @@
 
 <header class="site-header u-z1">
 
+  <a class="u-spacer u-block" href="/">&Oslash;</a>
   <div class="container">
 
     {% include nav-header.html %}
