--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,5 +41,5 @@
   <script src="/js/vendor/modernizr-2.8.3.min.js"></script>
   {% endif %}
 
-  <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 </head>
