--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,28 @@
 ---
 layout: default
 ---
+
+{% if page.tags contains "work in progress" %}
+  <small class="wip">Work in progress</small>
+{% endif %}
+
 <div class="post">
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
+    {% if page.subtitle %}
+      <h2>{{ page.subtitle }}</h2>
+    {% endif %}
 
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
 
   <article class="post-content">
+
+    {% if page.intro%}
+    <span class="intro">{{ page.intro | markdownify }}</span>
+    {% endif %}
+
     {{ content }}
   </article>
 
