--- a/_sass/_animations.scss
+++ b/_sass/_animations.scss
@@ -1,7 +1,7 @@
 
-@mixin animated() {
-  -webkit-animation-duration: .5s;
-  animation-duration: .5s;
+@mixin animated($time:.3s) {
+  -webkit-animation-duration: $time;
+  animation-duration: $time;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
@@ -31,7 +31,7 @@
 @keyframes fadeInDown {
   from {
     opacity: 0;
-    transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -50%, 0);
   }
 
   to {
@@ -49,6 +49,13 @@
   @include fadeInDown();
 }
 
-.delay-short {
+.animation-delay-short {
+  animation-delay: .3s;
+}
+.animation-delay-long {
   animation-delay: .5s;
+}
+
+.animation-slow {
+  @include animated(.8s);
 }
