--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,11 +1,75 @@
 body {
-  color: $c-gray800;
-  font-family: -apple-system, BlinkMacSystemFont,
-  "Segoe UI", "Roboto", "Oxygen",
-  "Ubuntu", "Cantarell", "Fira Sans",
-  "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: $font-sans-serif, sans-serif;
   font-size: 1em;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   line-height: $line-height;
+
+  @include media-min($screen-medium) {
+    font-size: 1.25em;
+  }
+}
+
+html {
+  font-size: 1em;
+}
+
+p {
+  margin-bottom: 1.3em;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  margin: 1.414em 0 0.5em;
+  line-height: 1.2;
+}
+
+h1 {
+  font-family: $font-sans-serif;
+  margin-top: 0;
+  font-size: $font-huge;
+  font-weight: $font-weight-light;
+  line-height: 1;
+
+  & + h2 {
+    color: $c-gray;
+    font-weight: $font-weight-light;
+    margin-top: 0;
+  }
+}
+
+h2 {
+  font-size: $font-largest;
+}
+
+h3 {
+  font-size: $font-larger;
+}
+
+h4 {
+  font-size: $font-large;
+}
+
+small,
+.font_small {
+  font-size: $font-small;
+}
+
+.intro {
+  font-size: $font-large;
+  //line-height: 2rem;
+}
+
+.highlight-text {
+  box-shadow: inset 0 -0.75rem $c-highlight;
+}
+
+.wip {
+  background: $c-red;
+  color: $c-white;
+  display: inline-block;
+  margin-bottom: $spacing;
+  padding: $spacing-tight;
 }
