--- a/_sass/_html-elements.scss
+++ b/_sass/_html-elements.scss
@@ -225,7 +225,7 @@ h6{
     font-size: $font-large;
   }
   h3{
-    font-size: $font-nrml-size;
+    font-size: $font-base;
   }
 }
 header {
@@ -286,7 +286,7 @@ input {
   &:-moz-placeholder,
   &::-moz-placeholder,
   &:-ms-input-placeholder{
-    color: $c-gray300;
+    color: $c-gray-light;
   }
 
   // INPUT TYPES
