refa(discoveryPost): Add simple checklist
- Add spin animation
- Add checklist component

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,3 +2,5 @@
   <hr class="container">
   <p class="container">Brought to you by <a href="http://about.me/chrisroy" title="More info about Chris">Chris Roy</a> and <a href="https://www.behance.net/iwonasztorc">Iwona Sztorc</a>.</p>
 </footer>
+
+{% include symbol/svg/sprite.symbol.svg %}
